    This can make queries fail with a WHERE condition like
       WHERE varcharcol = ANY ($1);
    where $1 is a text[].
    Reported by "samuelchoi16".
  - Fix numeric precision in IMPORT FOREIGN SCHEMA.
    In Oracle the precision of a NUMBER can be less than the scale,
    but that is not allowed in PostgreSQL.
    That leads to errors during IMPORT.
    Reported by Alberto Dell'Era.

  Enhancements:
  - Support push-down of "uuid" values.
    Per request from Asish Kumar Gaddipati.
  - Introduce a server option "nchar", turned "off" by default.
    This option, if set, enables the fix for NCHAR and NVARCHAR2 columns
    introduced in 2.2.0.
    We don't want that by default, since it causes a noticable performance
    hit and makes UPDATEs with long strings fail with ORA-01461.
    Problem reports by "threenotrump", "CHunter" and Phil Florent.
  - Push down LIMIT clauses if possible.
    These are pushed down as FETCH FIRST n ROWS ONLY from Oracle 12.2 on.
    Based on a patch by Gilles Darold, per request from Ilia Sazonov.

Version 2.3.0, released 2020-09-24
  Note: When upgrading from an older version of oracle_fdw, make sure to run
        ALTER EXTENSION oracle_fdw UPDATE;
        after installing the extension.

  Enhancements:
  - Support PostgreSQL v13.  Support for 9.2 and 9.1 is dropped.
  - Add a function "oracle_execute" to execute arbitrary SQL statements on
    Oracle.  The statements must not return a result (e.g. DDL statements).
  - Add an option "dblink" for Oracle database links.
    The option can be used on foreign tables or with IMPORT FOREIGN SCHEMA.
    Patch by Nicolas Boullis.
  - Add a column option "strip_zeros" that automatically strips ASCII 0
    characters from strings.
    Per request from Alexander Lampalzer.
  - New IMPORT FOREIGN SCHEMA options "max_long", "sample_percent" and
    "prefetch".  These set the corresponding options on imported tables.
    Suggested by "ferfebles".