@@ -179,6 +179,13 @@ INSERT INTO typetest1 (id, c, nc, vc, nvc, lc, r, u, lb, lr, b, num, fl, db, d, 
    '1 day 2 hours 30 seconds 1 microsecond',
    '-6 months'
 );
+-- change the "boolean" in Oracle to "2"
+SELECT oracle_execute('oracle', 'UPDATE typetest1 SET b = 2 WHERE id = 1');
+ oracle_execute 
+----------------
+ 
+(1 row)
+
 INSERT INTO shorty (id, c) VALUES (2, NULL);
 INSERT INTO typetest1 (id, c, nc, vc, nvc, lc, r, u, lb, lr, b, num, fl, db, d, ts, ids, iym) VALUES (
    3,
